--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,4 +1,5 @@
 body,html
+  height 100%
   margin 0
   padding 0
   font-family: "PingFang SC","STHeitiSC-Light","Helvetica-Light", arial, sans-serif
