--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -3,6 +3,7 @@ body,html
   margin 0
   padding 0
   font-family: "PingFang SC","STHeitiSC-Light","Helvetica-Light", arial, sans-serif
+  font-size: 16px
 .clearfix
   // display: inline-block
   // &:after
